--- a/src/main/webapp/template/home.html
+++ b/src/main/webapp/template/home.html
@@ -90,7 +90,7 @@
 					</ul>
 				</div>
 				
-				<div role="button" data-ng-click="createNote(newNote)"
+				<div role="button" data-ng-click="createNote(newNote);setEvents('NotesCrud','Create Note')"
 					class="btn btn-done pull-right">DONE</div>
 			</div>
 		</div>
